prevent scrolling on mobile

--- a/web/styles.css
+++ b/web/styles.css
@@ -40,11 +40,15 @@
 
 body {
   margin: 0;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  position: fixed;
+  touch-action: manipulation;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   background-color: var(--bg-color);
   color: var(--text-color);
-  touch-action: manipulation;
 }
 
 #canvas {
